--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Jason121250148/server-with-es6/issues"
   },
-  "homepage": "https://github.com/Jason121250148/server-with-es6#readme"
+  "homepage": "https://github.com/Jason121250148/server-with-es6#readme",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0"
+  }
 }
