--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "config": "^1.24.0",
     "cross-env": "^3.1.3",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "hdb": "^0.9.0"
   }
 }
