--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "config": "^1.24.0",
     "cross-env": "^3.1.3",
     "express": "^4.14.0",
-    "hdb": "^0.9.0"
+    "hdb": "^0.9.0",
+    "socket.io": "^1.7.1"
   }
 }
